# Auto-RAG-Research

./: .env.example  .gitignore  README.md  main.py  program.md  pyproject.toml
.claude/: settings.local.json
src/: __init__.py  agent.py  config_loader.py  cost_tracker.py  dataset_loader.py  evaluator.py  experiment_logger.py  git_checkpoint.py  rag_pipeline.py
src/data_sources/: __init__.py  base.py  gdrive.py  huggingface.py  local_csv.py  local_pdf.py  local_txt.py  notion.py  s3.py  web.py
tests/: __init__.py  test_agent.py  test_config_loader.py  test_cost_tracker.py  test_dataset_loader.py  test_evaluator.py  test_experiment_logger.py  test_git_checkpoint.py  test_integration.py  test_rag_pipeline.py
tests/test_data_sources/: __init__.py  test_gdrive.py  test_huggingface.py  test_local_csv.py  test_local_pdf.py  test_local_txt.py  test_notion.py  test_registry.py  test_s3.py  test_web.py
