[project]
name = "autoragresearch"
version = "0.1.0"
description = "Autonomous RAG pipeline optimization system"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    # Core RAG
    "langchain>=0.3.0",
    "langchain-community>=0.3.0",
    "langchain-openai>=0.2.0",
    "faiss-cpu>=1.8.0",
    "sentence-transformers>=3.0.0",
    "openai>=1.50.0",
    # Data Sources (PDF only)
    "pymupdf>=1.24.0",
    "pdfplumber>=0.11.0",
    "python-dotenv>=1.0.0",
    # Evaluation
    "ragas>=0.2.0",
    # Experiment Tracking
    "mlflow>=2.16.0",
    # Utilities
    "tiktoken>=0.7.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-cov>=5.0.0",
    "pytest-mock>=3.14.0",
]

[dependency-groups]
dev = [
    "pymupdf>=1.27.2",
]
